force-app/main/default/objects/Installation__c/Installation__c.object-meta.xml
<CustomObject>
    <label>Installation</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Installation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>