force-app/main/default/objects/Installation__c/fields/Antenna_Comments__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Comments__c</fullName>
    <label>Antenna Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>