force-app/main/default/objects/Installation__c/fields/Cables_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cables_Comments__c</fullName>
    <label>Cables Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>