force-app/main/default/objects/Installation__c/fields/Connection_Points_Comments__c.field-meta.xml
<CustomField>
    <fullName>Connection_Points_Comments__c</fullName>
    <label>Connection Points Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>