force-app/main/default/objects/Installation__c/fields/Display_Comments__c.field-meta.xml
<CustomField>
    <fullName>Display_Comments__c</fullName>
    <label>Display Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>