force-app/main/default/objects/Installation__c/fields/Installation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Installation_Audit__c</fullName>
    <label>Installation Audit #</label>
    <referenceTo>Installation_Audit__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>