force-app/main/default/objects/Installation__c/fields/MAS_Comments__c.field-meta.xml
<CustomField>
    <fullName>MAS_Comments__c</fullName>
    <label>MAS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>