force-app/main/default/objects/Installation__c/fields/OEM_Pre_Wire__c.field-meta.xml
<CustomField>
    <fullName>OEM_Pre_Wire__c</fullName>
    <label>OEM Pre-Wire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>