force-app/main/default/objects/Installation__c/fields/Strain_Relief_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Strain_Relief_Bracket__c</fullName>
    <label>Strain Relief Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>