force-app/main/default/objects/Installation__c/fields/Strain_Relief_Bracket_Comments__c.field-meta.xml
<CustomField>
    <fullName>Strain_Relief_Bracket_Comments__c</fullName>
    <label>Strain Relief Bracket Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>