force-app/main/default/objects/Installation__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>