force-app/main/default/objects/Installation__c/fields/UA__c.field-meta.xml
<CustomField>
    <fullName>UA__c</fullName>
    <label>UA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>