force-app/main/default/objects/Installation__c/validationRules/Make_Antenna_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Antenna_Comments_Required</fullName>
    <active>true</active>
    <description>Make Antenna Comments required if Antenna is No.</description>
    <errorConditionFormula>AND( 
ISBLANK( Antenna_Comments__c ), 
ISPICKVAL( Antenna__c , &quot;No&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Antenna_Comments__c</errorDisplayField>
    <errorMessage>Antenna Comments is required if Antenna is &quot;No&quot;</errorMessage>
</ValidationRule>