force-app/main/default/objects/Installation__c/validationRules/Make_Cables_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Cables_Comments_Required</fullName>
    <active>true</active>
    <description>Make Cables Comments required if Cables is No.</description>
    <errorConditionFormula>AND( 
ISBLANK( Cables_Comments__c ), 
ISPICKVAL( Cables__c , &quot;No&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Cables_Comments__c</errorDisplayField>
    <errorMessage>Cables Comments is required if Cables is &quot;No&quot;</errorMessage>
</ValidationRule>