force-app/main/default/objects/Installation__c/validationRules/Make_Display_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Display_Comments_Required</fullName>
    <active>true</active>
    <description>Make Display Comments required if Display is No.</description>
    <errorConditionFormula>AND( 
ISBLANK( Display_Comments__c ), 
ISPICKVAL( Display__c , &quot;No&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Display_Comments__c</errorDisplayField>
    <errorMessage>Display Comments is required if Display is &quot;No&quot;</errorMessage>
</ValidationRule>