force-app/main/default/objects/Installation__c/validationRules/Make_Strain_Relief_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Strain_Relief_Comments_Required</fullName>
    <active>true</active>
    <description>Make Strain Relief Bracket Comments required if Strain Relief Bracket is No.</description>
    <errorConditionFormula>AND( 
ISBLANK( Strain_Relief_Bracket_Comments__c ), 
ISPICKVAL( Strain_Relief_Bracket__c , &quot;No&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Strain_Relief_Bracket_Comments__c</errorDisplayField>
    <errorMessage>Strain Relief Bracket Comments is required if Strain Relief Bracket is &quot;No&quot;</errorMessage>
</ValidationRule>